:recycle: [core] SelectionGroup: set selection state before publishing the new selection set